[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/eyebeams/eyeBeamsOnePixel.png" type="Texture" id=1]
[ext_resource path="res://actors/Player/NicePng_spaceship-sprite-png_3369998.png" type="Texture" id=2]
[ext_resource path="res://assets/LaserOnePixelWide.png" type="Texture" id=5]
[ext_resource path="res://actors/Player/Player.gd" type="Script" id=12]
[ext_resource path="res://Prograde_Indicator.tscn" type="PackedScene" id=13]
[ext_resource path="res://Retrograde_Indicator.tscn" type="PackedScene" id=14]
[ext_resource path="res://Ship_System_RetrogradeIndicator.png" type="Texture" id=15]
[ext_resource path="res://Planet_Earth.png" type="Texture" id=16]
[ext_resource path="res://actors/Player/Guns_Ray_Cast.gd" type="Script" id=17]
[ext_resource path="res://assets/furniture/green-rug.png" type="Texture" id=18]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=5]
resource_name = "show_beams"

[node name="Player" type="KinematicBody2D" groups=["minimap", "persists", "player"]]
pause_mode = 2
scale = Vector2( 2, 2 )
z_index = 4
z_as_relative = false
collision_layer = 7
collision_mask = 7
script = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
z_index = 5
z_as_relative = false
texture = ExtResource( 2 )
region_rect = Rect2( -11.3452, -5.3969, 245.682, 154.56 )

[node name="EyeBeams" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -2.5, 8 )
rotation = 1.5708
scale = Vector2( 0.16, 0.16 )
frames = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="EyeBeams"]
anims/show_beams = SubResource( 5 )

[node name="LaserEyesLeft" type="Line2D" parent="."]
position = Vector2( 55, -4 )
z_index = 8
z_as_relative = false
points = PoolVector2Array( 0, 0, 0, 30 )
width = 1.0
default_color = Color( 0.188235, 0.631373, 0.690196, 1 )
texture = ExtResource( 1 )
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="LaserEyesRight" type="Line2D" parent="."]
position = Vector2( 55, 4 )
z_index = 8
z_as_relative = false
points = PoolVector2Array( 0, 0, 0, 30 )
width = 1.0
default_color = Color( 0.188235, 0.631373, 0.690196, 1 )
texture = ExtResource( 1 )
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Retrograde_Indicator" parent="." instance=ExtResource( 14 )]
visible = false

[node name="Prograde_Indicator" parent="." instance=ExtResource( 13 )]
visible = false

[node name="Thrust_Indicator" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 15 )

[node name="Planet_Indicator" type="Sprite" parent="."]
position = Vector2( 160, 0 )
scale = Vector2( 0.01, 0.01 )
z_index = 1
texture = ExtResource( 16 )

[node name="CollisionBox" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -47.5, 41.5, -49, 36.5, -57, 36.5, -57.5, -36, -49.5, -35.5, -48, -40.5, -33, -39.5, -29.5, -31.5, 0.5, -27.5, 8, -20, 20.5, -18.5, 23, -21.5, 34, -20.5, 34.5, -15.5, 39.5, -15, 42.5, -10.5, 50, -8.5, 50, -6.5, 57, -6, 57, 6, 50, 7, 49.5, 9, 42.5, 11, 39, 15, 35, 16, 34, 20.5, 22.5, 21.5, 21, 18, 8, 19.5, 0.5, 28, -29.5, 32, -32.5, 39.5 )

[node name="Left_Laser_Ray_Cast" type="RayCast2D" parent="."]
position = Vector2( 55, -4 )
enabled = true
collision_mask = 7
script = ExtResource( 17 )

[node name="Right_Laser_Ray_Cast" type="RayCast2D" parent="."]
position = Vector2( 55, 4.5 )
enabled = true
collision_mask = 7

[node name="Collision_Placeholder" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 18 )
